--- a/docs/构建指南.md
+++ b/docs/构建指南.md
@@ -15,7 +15,7 @@
 .\Scripts\gen_vs_proj.bat
 ```
 
-输出如下：
+输出类似下面这样：
 
 ```
 if "" == "-r" (rd /s /Q "build/Win" )
@@ -35,7 +35,7 @@ PAUSE
 请按任意键继续. . .
 ```
 
-此时 Visual Studio 工程已经生成到 MemoryProfiler/MemoryCrawler/build/Win，进入该目录双击使用 Visual Studio 打开改工程，“生成解决方案”即可
+此时 Visual Studio 工程已经生成到 MemoryProfiler/MemoryCrawler/build/Win，进入该目录双击 MemoryCrawler.sln 使用 Visual Studio 打开改工程，“生成解决方案”即可
 
 生成的可执行程序位于（假设是 Debug 构建）：MemoryCrawler\bin\Debug\
 
@@ -44,7 +44,34 @@ PAUSE
 进入 MemoryProfiler/MemoryCrawler 目录，执行 gen_xcode_proj.sh 脚本
 
 ```sh
+chmod +x ./Scripts/gen_xcode_proj.sh
 ./Scripts/gen_xcode_proj.sh
 ```
 
+输出类似下面这样：
 
+```
+-- The C compiler identification is AppleClang 11.0.0.11000033
+-- The CXX compiler identification is AppleClang 11.0.0.11000033
+-- Check for working C compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang
+-- Check for working C compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -- works
+-- Detecting C compiler ABI info
+-- Detecting C compiler ABI info - done
+-- Detecting C compile features
+-- Detecting C compile features - done
+-- Check for working CXX compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++
+-- Check for working CXX compiler: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -- works
+-- Detecting CXX compiler ABI info
+-- Detecting CXX compiler ABI info - done
+-- Detecting CXX compile features
+-- Detecting CXX compile features - done
+-- * DEBUG FLAG: OFF
+-- * COMMAND LINE FLAG: OFF
+-- Configuring done
+-- Generating done
+-- Build files have been written to: /Users/rayn/Workspace/MemoryProfiler/MemoryCrawler/build/MacOS
+```
+
+此时 Xcode 工程已经生成到 MemoryProfiler/MemoryCrawler/build/MacOS，进入该目录双击 MemoryCrawler.xcodeproj 使用 Xcode 打开该工程，选择 ALL_BUILD 构建即可
+
+生成的可执行程序位于（假设是 Debug 构建）：MemoryCrawler\bin\Debug\
